--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <h3>Shoot me a <span class="text-primary"> Message</span></h3>
                     <form action="POST" data-netlify="true">
-
+                       <name="contact" method="POST" data-netlify="true">
 
                         <div class="form-group">
                             <label for="first-name">First-name</label>
